  - SPVM::Hash->max_load_factor field become private
  - SPVM::Hash->set_max_load_factor method is removed
  - SPVM::Hash->load_factor method become private
  - SPVM::Hash->new_opt method become private
  - SPVM::Hash->murmur_hash become private
  - remove SPVM::Hash newa method to avoid complexity bugs in object type conversion
  - SPVM::StringBuffer->new_opt recieve SPVM::Hash object as options
0.0924 2020-10-16
  - fix echange api string return value bug
  - add real string type. before this relese runtime string type is same as byte[] type, but in this release string type is string type in also runtime
  - implicite conversion from byte[] to string become occur compile error
  - type conversion from byte[] to string become copy instead of reference copy
  - type conversion from string[] to byte become copy instead of reference copy
0.0923 2020-10-14
  - add SPVM::BlessedObject::Array set method
  - add SPVM::BlessedObject::Array get method
  - add SPVM::ByteList->new_len
  - add SPVM::ShortList->new_len
  - add SPVM::IntList->new_len
  - add SPVM::LongList->new_len
  - add SPVM::FloatList->new_len
  - add SPVM::DoubleList->new_len
  - add SPVM::StringList->new_len
  - add SPVM::List->new_len
  - SPVM::ByteList->newa is rename to new, and original new is removed
  - SPVM::ShortList->newa is rename to new, and original new is removed
  - SPVM::IntList->newa is rename to new, and original new is removed
  - SPVM::LongList->newa is rename to new, and original new is removed
  - SPVM::FloatList->newa is rename to new, and original new is removed
  - SPVM::DoubleList->newa is rename to new, and original new is removed
  - SPVM::StringList->newa is rename to new, and original new is removed
  - SPVM::List->newa is rename to new, and original new is removed
  - SPVM::Hash->newa is rename to new, and original new is renamed to new_empty
  - fix SPVM::ByteList capacity bug
  - fix SPVM::ShortList capacity bug
  - fix SPVM::IntList capacity bug