@@ -13,19 +13,17 @@ my $start_memory_blocks_count = SPVM::get_memory_blocks_count();
 
 # SPVM::Hash
 {
+  ok(TestCase::Lib::SPVM::Hash->test_rehash);
   ok(TestCase::Lib::SPVM::Hash->test_set_get_numeric);
   ok(TestCase::Lib::SPVM::Hash->test_murmur_hash);
-  ok(TestCase::Lib::SPVM::Hash->test_new_capacity);
   ok(TestCase::Lib::SPVM::Hash->test_set);
   ok(TestCase::Lib::SPVM::Hash->test_set_do_not_refer_caller_key);
   ok(TestCase::Lib::SPVM::Hash->test_get);
   ok(TestCase::Lib::SPVM::Hash->test_exists);
   ok(TestCase::Lib::SPVM::Hash->test_delete_with_no_hash_collision);
   ok(TestCase::Lib::SPVM::Hash->test_delete_with_hash_collision);
-  ok(TestCase::Lib::SPVM::Hash->test_rehash);
   ok(TestCase::Lib::SPVM::Hash->test_keys);
   ok(TestCase::Lib::SPVM::Hash->test_values);
-  ok(TestCase::Lib::SPVM::Hash->test_each);
   ok(TestCase::Lib::SPVM::Hash->test_copy);
 }
 
